--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.4.1",
+    "lucide-react": "^0.475.0",
     "openai": "^4.83.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
