--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^4.0.3"
+    "react-youtube": "^10.1.0",
+    "tailwindcss": "^4.0.3",
+    "youtube-iframe": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
